<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Problem">



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="100dp"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toolbar"
                app:titleTextColor="@color/black"
                android:background="@color/purple_200"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/CardView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:elevation="15dp"
                app:cardCornerRadius="10dp"
                android:clickable="true">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="What is Java?"
                                android:textSize="20dp"
                                android:textStyle="bold"
                                android:layout_marginLeft="5dp"
                                android:textColor="@color/black"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:textSize="20dp"
                                android:textColor="@color/black"
                                android:text="@string/what" />
                        </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/answer1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="show more"
                        android:textAllCaps="false"
                        android:layout_marginTop="15dp"
                        app:icon="@drawable/ic_question_answer"
                        style="@style/Widget.MaterialComponents.Button.TextButton"/>

                    <LinearLayout
                        android:id="@+id/hiddeView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/whatim"/>


                    </LinearLayout>


                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/CardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:elevation="15dp"
                app:cardCornerRadius="10dp"
                android:clickable="true">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Why Use Java?"
                            android:textSize="20dp"
                            android:textStyle="bold"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:textSize="20dp"
                            android:textColor="@color/black"
                            android:text="@string/u1"
                            />
                        <TextView
                            android:layout_marginTop="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:textSize="20dp"
                            android:textColor="@color/black"
                            android:text="@string/u2"
                            />
                        <TextView
                            android:layout_marginTop="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:textSize="20dp"
                            android:textColor="@color/black"
                            android:text="@string/u3"
                            />
                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/answer2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="show more"
                        android:textAllCaps="false"
                        android:layout_marginTop="15dp"
                        app:icon="@drawable/ic_question_answer"
                        style="@style/Widget.MaterialComponents.Button.TextButton"/>

                    <LinearLayout
                        android:id="@+id/hiddeView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/whyj"/>


                    </LinearLayout>


                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/CardView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:elevation="15dp"
                app:cardCornerRadius="10dp"
                android:clickable="true">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Java Output"
                            android:textSize="20dp"
                            android:textStyle="bold"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:textSize="20dp"
                            android:textColor="@color/black"
                            android:text="@string/out" />
                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/answer3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="show more"
                        android:textAllCaps="false"
                        android:layout_marginTop="15dp"
                        app:icon="@drawable/ic_question_answer"
                        style="@style/Widget.MaterialComponents.Button.TextButton"/>

                    <LinearLayout
                        android:id="@+id/hiddeView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/exout"/>


                    </LinearLayout>


                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/CardView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:elevation="15dp"
                app:cardCornerRadius="10dp"
                android:clickable="true">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Java Comments"
                            android:textSize="20dp"
                            android:textStyle="bold"
                            android:textColor="@color/black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20dp"
                            android:textColor="@color/black"
                            android:text="@string/com" />
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:src="@drawable/sc"/>
                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/answer4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="show more"
                        android:textAllCaps="false"
                        android:layout_marginTop="15dp"
                        app:icon="@drawable/ic_question_answer"
                        style="@style/Widget.MaterialComponents.Button.TextButton"/>

                    <LinearLayout
                        android:id="@+id/hiddeView4"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:src="@drawable/sc1"/>
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:src="@drawable/sc2"
                            android:layout_marginRight="100dp"/>


                    </LinearLayout>


                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>





        </LinearLayout>



    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        app:layout_anchor="@id/bottomappbar" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fabAnimationMode="slide"
        android:id="@+id/bottomappbar"
        app:fabAlignmentMode="center"
        app:fabCradleVerticalOffset="3dp"
        app:fabCradleRoundedCornerRadius="5dp"
        android:layout_gravity="bottom"
        app:navigationIcon="@drawable/ic_baseline_menu_24"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>